# akamai-deob-rust

./: Cargo.toml
examples/: deob.rs  minifier.rs
src/: lib.rs  main.rs  mod.rs
src/deobfuscator/: anti_tempering.rs  lib.rs  mod.rs
src/transformers/: anti_tempering.rs  inline_lazy_initializer.rs  inline_ops_fns.rs  inline_window_var.rs  mod.rs
src/util/: mod.rs  number_obfuscator.rs  syntax_context.rs
src/vm/: extractor.rs  lib.rs  replace.rs
