[package]
name = "akamai_deob_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
swc = "0.290.1"
swc_core = { version = "0.109.1", features = ["ecma_plugin_transform", "common", "ecma_parser", "ecma_codegen", "ecma_transforms_optimization"] }
oxc_allocator = "0.31.0"
oxc_ast = "0.31.0"
oxc_codegen = "0.31.0"
oxc_mangler = "0.31.0"
oxc_parser = "0.31.0"
oxc_semantic = "0.31.0"
oxc_span = "0.31.0"
oxc_syntax = "0.31.0"
oxc_traverse = "0.31.0"
oxc_minifier = "0.31.0"

cow-utils = "0.1.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"

pico-args = "0.5.0"
