[package]
name = "akamai_deob_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
swc = "1.0.0"
swc_core = { version = "1.0.0", features = ["ecma_plugin_transform", "common", "ecma_parser", "ecma_codegen", "ecma_transforms_optimization"] }
oxc_allocator = "0.31.0"
oxc_ast = "0.31.0"
oxc_codegen = "0.31.0"
oxc_mangler = "0.31.0"
oxc_parser = "0.31.0"
oxc_semantic = "0.31.0"
oxc_span = "0.31.0"
oxc_syntax = "0.31.0"
oxc_traverse = "0.31.0"
oxc_minifier = "0.31.0"

cow-utils = "0.1.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"

pico-args = "0.5.0"
regex = "1.11.0"
byteorder = "1.5.0"
tracing = "0.1.40"
indexmap = "2.6.0"
swc_ecma_transforms_base = "1.0.0"
swc_ecma_ast = "1.0.0"
swc_common = "1.0.0"
swc_ecma_utils = "1.0.0"
swc_ecma_visit = "1.0.0"
